--- a/index.css
+++ b/index.css
@@ -9,9 +9,13 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 .answer {
-
-    color: transparent;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1em;
 }
