--- a/index.css
+++ b/index.css
@@ -4,6 +4,12 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.text {
+    position: fixed;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 .question {
     display: block;
@@ -11,6 +17,7 @@
     margin-right: auto;
     margin-top: 1em;
     margin-bottom: 1em;
+    
 }
 
 .answer {
@@ -18,4 +25,14 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 1em;
+}
+
+img {
+    max-width:95%;
+    min-width: 15%;
+    max-height:100%;
+    min-height: 4em;
+
+    width:auto;
+    height:auto;
 }
