--- a/index.css
+++ b/index.css
@@ -36,3 +36,23 @@ img {
     width:auto;
     height:auto;
 }
+
+.selected {
+    border: 5px solid rgb(45, 76, 255);
+    transition: border-width 0.1s linear;
+}
+
+.correct {
+    border: 5px solid rgb(0, 255, 0);
+    transition: border-width 0.1s linear;
+}
+
+.wrong {
+    border: 5px solid rgb(255, 0, 0);
+    transition: border-width 0.1s linear;
+}
+
+.notselected {
+    border: 5px solid rgb(253, 249, 0);
+    transition: border-width 0.1s linear;
+}
