--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
 .text {
     position: fixed;
     top: 25%;
@@ -17,7 +18,7 @@
     margin-right: auto;
     margin-top: 1em;
     margin-bottom: 1em;
-    
+
 }
 
 .answer {
@@ -28,13 +29,26 @@
 }
 
 img {
-    max-width:95%;
+    max-width: 95%;
     min-width: 15%;
-    max-height:100%;
+    max-height: 100%;
     min-height: 4em;
 
-    width:auto;
-    height:auto;
+    width: auto;
+    height: auto;
+}
+
+@media only screen and (max-width: 600px) {
+    img {
+        max-width: 95%;
+        max-height: 100%;
+        min-width: 0%;
+        min-height: 0%;
+
+
+        width: auto;
+        height: auto;
+    }
 }
 
 .selected {
