--- a/index.css
+++ b/index.css
@@ -103,22 +103,22 @@ img {
     }
 }
 
-.selected {
+.answer.selected {
     border: 5px solid rgb(45, 76, 255);
     transition: border-width 0.1s linear;
 }
 
-.correct {
+.answer.correct {
     border: 5px solid rgb(0, 255, 0);
     transition: border-width 0.1s linear;
 }
 
-.wrong {
+.answer.wrong {
     border: 5px solid rgb(255, 0, 0);
     transition: border-width 0.1s linear;
 }
 
-.notselected {
+.answer.notselected {
     border: 5px solid rgb(253, 249, 0);
     transition: border-width 0.1s linear;
 }
@@ -128,4 +128,80 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.section-title.darker {
+    background: #121212;
+}
+
+.section-title {
+    display: block;
+    text-align: center;
+    background: #1a1a1a;
+    color: #959595;
+    font-size: 1.1rem;
+    padding: 0.4rem;
+}
+
+.timer {
+    display: block;
+    text-align: center;
+    color: white;
+    font-size: 3rem;
+}
+
+.question-list {
+    padding: 1rem;
+}
+.question-list div {
+    display: inline-block;
+    background: #363636;
+    color: white;
+    font-size: 1.3rem;
+    line-height: 2em;
+    width: 2em;
+    height: 2em;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    margin: 0rem .2rem;
+}
+.question-list div::before {
+    content: "";
+    display: block;
+    background: #363636;
+    width: 1em;
+    height: 1em;
+    position: absolute;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.question-list .wrong::before, .legend .wrong {
+    background: #f44336;
+}
+
+.question-list .active::before, .legend .active{
+    background: #0f7ae5;
+} 
+
+.question-list .correct::before, .legend .correct {
+    background: #4caf50;
+}
+
+.question-list .correct.wrong::before, .legend .correct.wrong {
+    background: #ffc107;
+}
+
+.legend {
+    display: block;
+    text-align: center;
+}
+
+.legend .circle {
+    width: .5em;
+    height: .5em;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 50%;
+    margin-left: 0.2rem;
 }
