--- a/css/index.css
+++ b/css/index.css
@@ -149,7 +149,7 @@ img {
 }
 
 img.answer.selected {
-    border: 5px solid rgb(45, 76, 255);
+    border: 5px solid rgb(30, 135, 240);
     transition: border-width 0.1s linear;
 }
 
@@ -169,7 +169,7 @@ img.answer.notselected {
 }
 
 p.answer.selected {
-    box-shadow: inset 0 0 0 5px rgb(45, 76, 255);
+    box-shadow: inset 0 0 0 5px rgb(30, 135, 240);
     transition: box-shadow 0.1s linear;
     border: 1px solid transparent;
 }
@@ -194,12 +194,12 @@ p.answer.notselected {
 
 p.answer:hover {
     cursor: pointer;
-    color: rgb(45, 76, 255);
+    color: rgb(30, 135, 240);
 }
 
 p.answer.selected:hover {
     cursor: pointer;
-    color: rgb(45, 76, 255);
+    color: rgb(30, 135, 240);
 }
 
 p.answer.correct:hover {
@@ -308,7 +308,7 @@ p.answer.notselected:hover {
 }
 
 .question-list .active::before, .legend .active{
-    background: #0f7ae5;
+    background: #1e87f0;
 } 
 
 .question-list .correct::before, .legend .correct {
