--- a/css/index.css
+++ b/css/index.css
@@ -92,14 +92,13 @@ img.question {
 
 p.question {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 1.2em;
+    margin-right: 1.2em;
     margin-top: 1em;
     margin-bottom: 1em;
     color: white;
     font-size: 1.5rem;
     font-weight: bold;
-
     text-align: center;
 }
 
